experiments/ISSTA21/109/log-make
scripts/kconfig/conf --silentoldconfig Kconfig
  HOSTCC  arch/x86/tools/relocs
  CHK     include/linux/version.h
  UPD     include/linux/version.h
  CHK     include/generated/utsrelease.h
  UPD     include/generated/utsrelease.h
  CC      kernel/bounds.s
  GEN     include/generated/bounds.h
  CC      arch/x86/kernel/asm-offsets.s
  GEN     include/generated/asm-offsets.h
  CALL    scripts/checksyscalls.sh
  HOSTCC  scripts/genksyms/genksyms.o
  HOSTCC  scripts/genksyms/lex.lex.o
  HOSTCC  scripts/genksyms/parse.tab.o
  HOSTLD  scripts/genksyms/genksyms
  CC      scripts/mod/empty.o
  HOSTCC  scripts/mod/mk_elfconfig
  MKELF   scripts/mod/elfconfig.h
  HOSTCC  scripts/mod/file2alias.o
  HOSTCC  scripts/mod/modpost.o
  HOSTCC  scripts/mod/sumversion.o
  HOSTLD  scripts/mod/modpost
  HOSTCC  scripts/selinux/genheaders/genheaders
  HOSTCC  scripts/selinux/mdp/mdp
  HOSTCC  scripts/kallsyms
  HOSTCC  scripts/pnmtologo
  HOSTCC  scripts/conmakehash
  HOSTCC  scripts/bin2c
  HOSTCC  scripts/recordmcount
  CC      kernel/hrtimer.o
kernel/hrtimer.c: In function ‘__run_hrtimer’:
kernel/hrtimer.c:1267:17: error: ‘HRTIMER_STATE_ENQUEUEDUED’ undeclared (first use in this function)
  if (restart != HRTIMER_STATE_ENQUEUEDUED)) 
                 ^
kernel/hrtimer.c:1267:17: note: each undeclared identifier is reported only once for each function it appears in
kernel/hrtimer.c:1267:43: error: expected statement before ‘)’ token
  if (restart != HRTIMER_STATE_ENQUEUEDUED)) 
                                           ^
scripts/Makefile.build:305: recipe for target 'kernel/hrtimer.o' failed
make[1]: *** [kernel/hrtimer.o] Error 1
Makefile:1497: recipe for target 'kernel/hrtimer.o' failed
make: *** [kernel/hrtimer.o] Error 2
